methods.slug.SlugHunting.scala.error
Erreur de compilation :
SlugHunting:4: error: not found: value estFaceBiscuit
  while (!estFaceBiscuit())
          ^